--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,1 +1,12 @@
+body {
+  background-image: url("https://images.unsplash.com/photo-1519681393784-d120267933ba?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1124&q=100");
+  background-position: center;
+}
 
+.card-1 {
+  backdrop-filter: blur(12px) saturate(158%);
+  -webkit-backdrop-filter: blur(12px) saturate(158%);
+  background-color: rgba(255, 255, 255, 0.34);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+}
